SERVER-43316 uassert when trying to open a checkpoint cursor on a LSM WiredTiger table